[package]
name = "neotron-common-bios"
version = "0.6.1"
authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
edition = "2018"
description = "Common BIOS code and API for all Neotron systems."
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", default-features=false }
